--- a/public/examples/user.html
+++ b/public/examples/user.html
@@ -355,7 +355,7 @@
           $('body').removeClass('white-content');
         });
 
-        getBioData("okobiajoshua");
+        getBioData();
       });
     });
   </script>
